# DataScience-HEP

./: .gitattributes  .gitignore  Dockerfile  Lezione 1.A - Data Science.pptx  Lezione 1.B - Tecnologie.pptx  Lezione 7.A - Reti Neurali.pptx  README.md  docker-compose-airflow.yaml  docker-compose.yml  libffi6_3.2.1-8_amd64.deb  pyproject.toml  rebuild_docker.sh  requirements.txt  reset.sh  tensorflow-2.8.0-cp310-cp310-linux_x86_64.whl
Esame/: Esame esercizio 1.ipynb  Esame esercizio 2.ipynb  Esame esercizio 3.ipynb  Esame.ipynb  Soluzione Esame.ipynb
Lezioni/: Lezione 0.A - Python.ipynb  Lezione 0.B - Esercizi.ipynb  Lezione 0.S - Soluzioni.ipynb  Lezione 1.A - Pandas e Feature Engineering.ipynb  Lezione 1.A - Python.ipynb  Lezione 1.B - Soluzioni.ipynb  Lezione 1.E - Esercizi.ipynb  Lezione 1.S - Soluzioni.ipynb  Lezione 2.A - Pandas DataFrame.ipynb  Lezione 2.A - Regressione e Classificazione.ipynb  Lezione 2.B - Esercizi.ipynb  Lezione 2.B - Soluzioni.ipynb  Lezione 2.E - Esercizi.ipynb  Lezione 3.A - Regressione.ipynb  Lezione 3.B - Esercizi.ipynb  Lezione 3.E - Esercizi.ipynb  Lezione 4.A - Decision Tree.ipynb  Lezione 4.A - Time Series.ipynb  Lezione 4.B - Esercizi.ipynb  Lezione 4.B - Soluzioni.ipynb  Lezione 4.E - Esercizi.ipynb  Lezione 4.S - Soluzioni.ipynb  Lezione 5.A - Clusterizzazione e Classificazione.ipynb  Lezione 5.A - Machine Learning.ipynb  Lezione 5.B - Esercizi.ipynb  Lezione 5.B - Soluzioni.ipynb  Lezione 5.E - Esercizi.ipynb  Lezione 5.S - Soluzioni.ipynb  Lezione 6.A - Time Series.ipynb  Lezione 6.B - Esempio.ipynb  Lezione 6.B - Esercizi.ipynb  (+7 more)
(+27 files in other folders)
